--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@
     --bs-dark-primary:#1c1c1c;
     --bs-main-color:#fff;
     --bs-primary-color:#c6c6c6;
-    --secondary-color: #29a9fd;
-    --bs-supporting-color: #C850C0;
+    --secondary-color: #78c9ff;
+    --bs-supporting-color: #ff74f6;
 }
 
 h1, h2,h3,h4,h5{
